--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -17,114 +17,15 @@
 		<meta name="description" content="todo" />
 </head>
 
-	<body class="@ViewBag.Template">
-		<a class="sr-only">Skip navigation</a>
-		<header class="navbar navbar-inverse navbar-fixed-top bs-branch-nav" role="banner">
-			<div class="container">
-				<div class="navbar-header">
-					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					@Html.ActionLink("Branch", "Index", "Home", null, new { @class = "navbar-brand" })
-				</div>
-				<nav class="collapse navbar-collapse" role="navigation">
-					<ul class="nav navbar-nav">
-						<li class="">
-							@Html.ActionLink("Home", "Index", "Home")
-						</li>
-						<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Halo 4 <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li>
-									@Html.ActionLink("Halo 4", "Index", "Home")
-								</li>
+<body class="@ViewBag.Template" style="padding-top: 31px;" count-data-ref="0">
+		@Html.Partial("Header")
 
-								<li class="divider"></li>
-								<li class="dropdown-header">Waypoint</li>
-								<li>
-									@Html.ActionLink("Playlists", "Index", "Home")
-								</li>
-								<li>
-									@Html.ActionLink("Challenges", "Index", "Home")
-								</li>
-
-								<li class="divider"></li>
-								<li class="dropdown-header">Leaf</li>
-								<li>
-									<a href="http://leafapp.co/h4/csr_leaderboards">Leaderboards</a>
-								</li>
-								<li>
-									<a href="http://leafapp.co/h4/top_ten">Top Ten Leaderboards</a>
-								</li>
-							</ul>
-						</li>
-						<li class="">
-							@Html.ActionLink("Blog", "Index", "Home")
-						</li>
-						<li class="">
-							@Html.ActionLink("About", "Index", "Home")
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<form class="navbar-form" method="GET" action="">
-								<div class="form-group">
-									<input type="text" name="q" placeholder="Search Gamertag" class="form-control" value="">
-								</div>
-							</form>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		
 		<article>
 			@RenderBody()
 		</article>
 		
-		<footer class="bs-footer" role="contentinfo">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-10">
-						<p>Developed by <a href="http://twitter.com/alexerax" target="_blank">&#64;alexerax</a>.</p>
-						<p>Developed in C# | ASP.NET on Windows Azure</p>
-						<p>Code licensed under the <a href="http://www.dbad-license.org/" target="_blank">Don't Be A Dick</a> Public License.</p>
-						<p>&copy; @DateTime.Now.Year - Branch</p>
-						<ul class="footer-links">
-							<li><a href="https://github.com/TheTree/Branch" target="_blank">Github</a></li>
-							<li>·</li>
-							<li><a href="http://xboxchaos.com/" target="_blank">Xbox Chaos</a></li>
-							<li>·</li>
-							<li><a href="http://halo.reddit.com/" target="_blank">r/halo</a></li>
-							<li>·</li>
-							<li><a href="http://unscwarfare.com/" target="_blank">UNSC Warfare</a></li>
-							<li>·</li>
-							<li><a href="http://onyx.io/" target="_blank">Onyx</a></li>
-							<li>·</li>
-							<li><a href="#" target="_blank">Blog</a></li>
-						</ul>
-						<ul class="footer-links">
-							<li>
-								@Html.ActionLink("Privacy Policy", "Index", "Home")
-							</li>
-							<li>·</li>
-							<li>
-								@Html.ActionLink("Terms", "Index", "Home")
-							</li>
-						</ul>
-					</div>
+		@Html.Partial("Footer", false)
 
-					<div class="col-md-2 hidden-xs hidden-sm">
-						<img src="@Url.Content("~/Content/Images/uk-map.png")" class="img-circle" alt="" style="width: 60px; height: 77px;" />
-					</div>
-				</div>
-			</div>
-		</footer>
-
-		
 		<div id="scripts">
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 			<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
@@ -136,20 +37,20 @@
 			</script>
 
 			@RenderSection("scripts", false)
-			
+
 			<!-- Social Media Button Scripts -->
 			<div id="fb-root"></div>
 			<script>
 				(function (d, s, id) {
-					var js, fjs = d.getElementsByTagName(s)[0];
-					if (d.getElementById(id)) return;
-					js = d.createElement(s); js.id = id;
-					js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=189234734457151";
-					fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk')
+						var js, fjs = d.getElementsByTagName(s)[0];
+						if (d.getElementById(id)) return;
+						js = d.createElement(s); js.id = id;
+						js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=189234734457151";
+						fjs.parentNode.insertBefore(js, fjs);
+					}(document, 'script', 'facebook-jssdk')
 				);
 			</script>
 			<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
 		</div>
-	</body>
+</body>
 </html>
