--- a/Branch.App/Areas/Halo4/Views/Csr/Details.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Csr/Details.cshtml
@@ -2,7 +2,7 @@
 @using Branch.App.Helpers.Razor
 @using Branch.App.Helpers.Razor.Halo4
 @using Enums = Branch.App.Areas.Halo4.Models.Enums
-@model CsrDetailData
+@model CsrDetailViewModel
 @{
 	ViewBag.Title = string.Format("{0}'s Halo 4 Csr - {1}", BranchHelpers.CheckGamertagPrivacy(@Model.ServiceRecord.Gamertag), Model.CurrentSkillRank.PlaylistName);
 	Layout = "~/Areas/Halo4/Views/Shared/_Layout.cshtml";
