--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+	var altFooter = (bool) (ViewBag.AlternativeFooter ?? false);
+}
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>
@@ -17,40 +20,43 @@
 		<meta name="description" content="todo" />
 </head>
 
-<body class="@ViewBag.Template" style="padding-top: 31px;" count-data-ref="0">
+<body class="@ViewBag.Template page-bg-backup-cover" count-data-ref="1">
+	<div class="page-bg-cover"></div>
+	<div id="page-bg-mask" class="mask">
 		@Html.Partial("Header")
 
 		<article>
 			@RenderBody()
 		</article>
-		
-		@Html.Partial("Footer", false)
 
-		<div id="scripts">
-			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-			<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+		@Html.Partial("Footer", altFooter)
+	</div>
 
-			<script>
-				$(document).ready(function () {
-					$('*[role="tooltip"]').tooltip();
-				});
-			</script>
+	<div id="scripts">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-			@RenderSection("scripts", false)
+	<script>
+		$(document).ready(function () {
+			$('*[role="tooltip"]').tooltip();
+		});
+	</script>
 
-			<!-- Social Media Button Scripts -->
-			<div id="fb-root"></div>
-			<script>
-				(function (d, s, id) {
-						var js, fjs = d.getElementsByTagName(s)[0];
-						if (d.getElementById(id)) return;
-						js = d.createElement(s); js.id = id;
-						js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=189234734457151";
-						fjs.parentNode.insertBefore(js, fjs);
-					}(document, 'script', 'facebook-jssdk')
-				);
-			</script>
-			<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-		</div>
+	@RenderSection("scripts", false)
+
+	<!-- Social Media Button Scripts -->
+	<div id="fb-root"></div>
+	<script>
+		(function (d, s, id) {
+				var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) return;
+				js = d.createElement(s); js.id = id;
+				js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=189234734457151";
+				fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk')
+		);
+	</script>
+	<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+</div>
 </body>
 </html>
