--- a/Branch.App/Views/Shared/FlashMessage.cshtml
+++ b/Branch.App/Views/Shared/FlashMessage.cshtml
@@ -6,11 +6,7 @@
 <div id="flash-message-container" class="alert-container">
 	<div id="flash-message-box" class="alert alert-dismissable">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-		<strong>
-
-		</strong>
-		<span>
-
-		</span>
+		<strong></strong>
+		<span></span>
 	</div>
 </div>
