--- a/Branch.App/Areas/Halo4/Views/Csr/Details.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Csr/Details.cshtml
@@ -15,6 +15,9 @@
 }
 
 <div class="bs-branch-section csr-details">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header">
 		<h1>@BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag)'s @currentSkillRank.PlaylistName CSR</h1>
 	</div>
