--- a/Branch.App/Areas/Halo4/Views/Csr/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Csr/Index.cshtml
@@ -36,6 +36,9 @@
 }
 
 <div class="bs-branch-section csr">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header">
 		<h1>@BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag)'s CSR</h1>
 	</div>
