--- a/Branch.App/Areas/Halo4/Views/ServiceRecord/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/ServiceRecord/Index.cshtml
@@ -13,6 +13,9 @@
 }
 
 <div class="bs-branch-section overview">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header">
 		<h1>Overview</h1>
 	</div>
