fix for if you're on a page with a slug and go to commendations, it uses your current slug, causing issues.

--- a/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
@@ -42,7 +42,7 @@
 				</li>
 
 				<li class="@BranchHelpers.CompareEnum(currentPage, Enums.Pages.Commendations, "active")">
-					@Html.RouteLink("Commendations", "Halo4_Commendations", new { gamertag = BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag) })
+					@Html.RouteLink("Commendations", "Halo4_Commendations", new { slug = "Weapons", gamertag = BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag) })
 
 					@if (currentPage == Enums.Pages.Commendations)
 					{
