commendation flash messages

--- a/Branch.App/Areas/Halo4/Views/Commendations/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Commendations/Index.cshtml
@@ -13,6 +13,9 @@
 }
 
 <div class="bs-branch-section commendations">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header">
 		<h1>Commendations for @Model.CommendationCategory.ToString()</h1>
 	</div>
@@ -50,7 +53,7 @@
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" 
 						     aria-valuenow="<%= percentage %>" aria-valuemin="0" 
-							 aria-valuemax="100" style="width: @percentage%">
+						     aria-valuemax="100" style="width: @percentage%">
 							<span class="sr-only">@percentage% Complete</span>
 							<span class="progress-bar-indicator">@percentage% Complete</span>
 						</div>
