game exception handling

--- a/Branch.App/Areas/Halo4/Views/Game/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Game/Index.cshtml
@@ -37,6 +37,9 @@
 }
 
 <div class="bs-branch-section game-details">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header row">
 		<div class="col-md-12">
 			<h1> @title </h1>
