history exception handling

--- a/Branch.App/Areas/Halo4/Views/History/SpartanOps.cshtml
+++ b/Branch.App/Areas/Halo4/Views/History/SpartanOps.cshtml
@@ -16,6 +16,9 @@
 }
 
 <div class="bs-branch-section overview">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header">
 		<h1>Spartan Ops History</h1>
 	</div>
