--- a/Branch.App/Areas/Halo4/Views/History/WarGames.cshtml
+++ b/Branch.App/Areas/Halo4/Views/History/WarGames.cshtml
@@ -17,6 +17,9 @@
 }
 
 <div class="bs-branch-section overview">
+	
+	@Html.Partial("FlashMessage", false)
+
 	<div class="page-header">
 		<h1>War Games History</h1>
 	</div>
