--- a/Branch.App/Content/Styles/application.scss
+++ b/Branch.App/Content/Styles/application.scss
@@ -64,5 +64,6 @@ footer > .container > .row > .col-md-2 > .made-in {
 }
 
 @import "Home/index";
+@import "About/index";
 @import "Search/index";
 @import "Halo4/home";
