Did some more work on challanges/playlists for halo 4

--- a/Branch.App/Content/Styles/Halo4/_home.scss
+++ b/Branch.App/Content/Styles/Halo4/_home.scss
@@ -176,3 +176,5 @@ body.halo4_homepage {
 @import "commendations";
 @import "csr";
 @import "game_history";
+@import "challenges";
+@import "playlists";
