Updated bootstrap theme, tweaked some backend code. now fixing the ui that was broken by the bootstrap update. fuck css/html. just fuck it.

--- a/Branch.App/Areas/Halo4/Views/Home/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Home/Index.cshtml
@@ -6,13 +6,15 @@
 }
 
 <article>
-	<div class="container">
-		<h1>
-			Halo 4 Page
-		</h1>
-		<p>
-			yolo swag nigga
-		</p>
+	<div id="content" style="color: white; background-color: #3d3d7c; background-color: rgba(61,61,124,0.5);">
+		<div class="container">
+			<h1>
+				Halo 4
+			</h1>
+			<p>
+				yolo swag nigga
+			</p>
+		</div>
 	</div>
 </article>
 
