--- a/Branch.App/Content/Styles/Search/_index.scss
+++ b/Branch.App/Content/Styles/Search/_index.scss
@@ -1,4 +1,12 @@
 ﻿body.search {
+
+	.bs-header {
+		h1 {
+			font-size: 30px;
+			text-align: center;
+		}
+	}
+
 	.row {
 		list-style-type: none;
 		padding: 0;
