Alot more CSS and fixes

--- a/Branch.App/Content/Styles/bootstrap-branch.css
+++ b/Branch.App/Content/Styles/bootstrap-branch.css
@@ -344,6 +344,29 @@
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1); }
 
 /*# sourceMappingURL=bootstrap-theme.css.map */
+.progress {
+  margin-bottom: 0px;
+  background: transparent;
+  border-radius: 0px;
+  border: 1px solid #428bca; }
+
+.progress-bar {
+  float: left;
+  width: 0;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+  background: #428bca;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-transition: width .6s ease;
+  transition: width .6s ease; }
+
+.well {
+  border-radius: 0px; }
+
 .navbar {
   background-color: white;
   border-bottom: 1px solid #3d3d7c; }
@@ -376,4 +399,45 @@
     .bs-footer .footer-links li {
       display: inline;
       padding: 0 2px; }
+
+.bs-sidebar {
+  margin-top: 50px; }
+  .bs-sidebar .affix {
+    position: static; }
+  .bs-sidebar .bs-sidenav {
+    margin-top: 20px;
+    margin-bottom: 20px; }
+  .bs-sidebar .nav > li > a {
+    display: block;
+    font-size: 15px;
+    font-weight: 500;
+    color: #999;
+    padding: 4px 20px; }
+    .bs-sidebar .nav > li > a:hover, .bs-sidebar .nav > li > a:focus {
+      padding-left: 19px;
+      color: #563d7c;
+      text-decoration: none;
+      background-color: transparent;
+      border-left: 1px solid #563d7c; }
+  .bs-sidebar .nav > .active > a,
+  .bs-sidebar .nav > .active:hover > a,
+  .bs-sidebar .nav > .active:focus > a {
+    padding-left: 18px;
+    font-weight: 700;
+    color: #563d7c;
+    background-color: transparent;
+    border-left: 2px solid #563d7c; }
+  .bs-sidebar .nav .nav {
+    padding-bottom: 10px; }
+    .bs-sidebar .nav .nav > li > a {
+      padding-top: 1px;
+      padding-bottom: 1px;
+      padding-left: 40px;
+      font-size: 13px;
+      font-weight: 400; }
+    .bs-sidebar .nav .nav .active > a,
+    .bs-sidebar .nav .nav .active:hover > a,
+    .bs-sidebar .nav .nav .active:focus > a {
+      font-weight: 500;
+      padding-left: 38px; }
 
