--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -8,12 +8,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			@Html.ActionLink("Branch", "Index", "Home", null, new { @class = "navbar-brand" })
+			@Html.ActionLink("Branch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 		</div>
 		<nav class="collapse navbar-collapse" role="navigation">
 			<ul class="nav navbar-nav">
 				<li class="">
-					@Html.ActionLink("Home", "Index", "Home")
+					@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)
 				</li>
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Halo 4 <b class="caret"></b></a>
@@ -25,10 +25,10 @@
 						<li class="divider"></li>
 						<li class="dropdown-header">Waypoint</li>
 						<li>
-							@Html.ActionLink("Playlists", "Index", "Home")
+							@Html.ActionLink("Playlists", "Index", "Playlists", new { area = "Halo4" }, null)
 						</li>
 						<li>
-							@Html.ActionLink("Challenges", "Index", "Home")
+							@Html.ActionLink("Challenges", "Index", "Challenges", new { area = "Halo4" }, null)
 						</li>
 
 						<li class="divider"></li>
@@ -42,15 +42,15 @@
 					</ul>
 				</li>
 				<li class="">
-					@Html.ActionLink("Blog", "Index", "Home")
+					@Html.ActionLink("Blog", "Index", "Home", new { area = "" }, null)
 				</li>
 				<li class="">
-					@Html.ActionLink("About", "Index", "Home")
+					@Html.ActionLink("About", "Index", "About", new { area = "" }, null)
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					@using (Html.BeginForm("Index", "Search", new { }, FormMethod.Get, new { @class = "navbar-form" }))
+					@using (Html.BeginForm("Index", "Search", new { area = "" }, FormMethod.Get, new { @class = "navbar-form" }))
 					{
 						<div class="form-group">
 							<input type="text" name="q" placeholder="Search Gamertag" class="form-control" value="">
