--- a/Branch.App/Content/Styles/bootstrap-branch.css
+++ b/Branch.App/Content/Styles/bootstrap-branch.css
@@ -401,9 +401,14 @@
       padding: 0 2px; }
 
 .bs-sidebar {
-  margin-top: 50px; }
-  .bs-sidebar .affix {
-    position: static; }
+  margin-top: 50px;
+  padding-left: 40px; }
+  .bs-sidebar.affix {
+    position: fixed;
+    top: 25px; }
+    @media (max-width: 992px) {
+      .bs-sidebar.affix {
+        position: static; } }
   .bs-sidebar .bs-sidenav {
     margin-top: 20px;
     margin-bottom: 20px; }
@@ -426,7 +431,7 @@
     font-weight: 700;
     color: #563d7c;
     background-color: transparent;
-    border-left: 2px solid #563d7c; }
+    border-left: 1px solid #563d7c; }
   .bs-sidebar .nav .nav {
     padding-bottom: 10px; }
     .bs-sidebar .nav .nav > li > a {
@@ -440,4 +445,15 @@
     .bs-sidebar .nav .nav .active:focus > a {
       font-weight: 500;
       padding-left: 38px; }
+    .bs-sidebar .nav .nav .nav > li > a {
+      padding-top: 1px;
+      padding-bottom: 1px;
+      padding-left: 60px;
+      font-size: 13px;
+      font-weight: 400; }
+    .bs-sidebar .nav .nav .nav .active > a,
+    .bs-sidebar .nav .nav .nav .active:hover > a,
+    .bs-sidebar .nav .nav .nav .active:focus > a {
+      font-weight: 500;
+      padding-left: 58px; }
 
